--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Cache and logs (Symfony2)
 /app/cache/*
 /app/logs/*
@@ -51,7 +50,6 @@
 
 # Embedded web-server pid file
 /.web-server-pid
-=======
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -73,4 +71,6 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 .idea/
->>>>>>> a4d44b6 (First commit)
+
+### Dossier POUBELLE avec nos premiers test Symfony ###
+Poubelle/
