--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -20,6 +20,12 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+        entity_managers:
+            example_manager:
+                # Place your functions here
+                dql:
+                    datetime_functions:
+                        test_datetime: App\DQL\Hour
 
 when@test:
     doctrine:
