Feat: generate dql query to get creaneaux

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -20,12 +20,16 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
-        entity_managers:
-            example_manager:
-                # Place your functions here
-                dql:
-                    datetime_functions:
-                        test_datetime: App\DQL\Hour
+        dql:
+            datetime_functions:
+                Hour: App\DQL\Hour
+                Minute: App\DQL\Minute
+                Div: App\DQL\Div
+                Weekday: App\DQL\WeekDay
+                Round: App\DQL\Round
+                Floor: App\DQL\Floor
+                QuarterTime: App\DQL\QuarterTime
+                Creneau: App\DQL\Creneau
 
 when@test:
     doctrine:
